feat: improved test coverage